# Proyecto2-Prediccion-de-cancer

./: .env.example  .gitignore  main.py  pyproject.toml
.cursor/rules/: proyecto-p2-enunciado.mdc
.streamlit/: config.toml
backend/app/: main.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: resumen.md  resumen_diagnostico_clinico.md  resumen_diagnostico_imagen.md
dl/: __init__.py
dl/vision_baseline/: README.md  __init__.py  dataset.py  evaluate.py  train.py
dl/vision_baseline_kvasir/: README.md  __init__.py  analisis_evaluacion.py  constantes.py  crear_splits.py  entrenar.py  evaluar.py  generar_manifest.py  gradcam.py  manifest_entrenamiento.py  modelo_baseline.py  particion.py  paths.py
docs/: README.md  entrega-p2-simulador.md  resumen_cambios_commit_2026-04-27.md
frontend/: README.md  app.py  config.py  estilos_clinicos.py  formulario_clinico.py  labels.py  layout.py  paths.py  servicio_api.py  servicio_modelo.py  servicio_vision_kvasir.py  state.py  visor_imagen.py
frontend/.streamlit/: config.toml
frontend/views/: __init__.py  carga_imagenes.py  datos_clinicos.py  explorador_dl.py  explorador_ml.py  portal_simulador.py  resultado.py  revision_caso.py
ml/: README.md  __init__.py  feature_engineering.py  main.py  readme_imagenes.md  readme_imagenes_kvasir.md  readme_ml_clinico.md
ml/vision_baseline/: evaluate.py  train.py
ml/vision_baseline_kvasir/: crear_splits.py  (+7 more)
notebooks/: cancer_analysis.ipynb  cancer_models.ipynb
tests/: README.md  conftest.py  test_api.py
(+122 files in other folders)
